--- a/src/cmake/Config.cmake.in
+++ b/src/cmake/Config.cmake.in
@@ -7,6 +7,8 @@ if (NOT @OPENIMAGEIO_CONFIG_DO_NOT_FIND_IMATH@ AND NOT OPENIMAGEIO_CONFIG_DO_NOT
     if (@OpenEXR_VERSION@ VERSION_GREATER_EQUAL 3.0)
         find_dependency(Imath @Imath_VERSION@
                         HINTS @Imath_DIR@)
+        find_dependency(OpenEXR @OpenEXR_VERSION@
+                        HINTS @OpenEXR_DIR@)
     elseif (@OpenEXR_VERSION@ VERSION_GREATER_EQUAL 2.4 AND @FOUND_OPENEXR_WITH_CONFIG@)
         find_dependency(IlmBase @OpenEXR_VERSION@
                         HINTS @IlmBase_DIR@ @OpenEXR_DIR@)
