Fix boost static library linking since $<TARGET_NAME_IF_EXISTS:X> didn't seem to work for the boost libraries.
This does have an issue where it puts absolute paths back into the OpenImageIOTargets.cmake file but there are other libraries which already do that so it doesn't seem too bad.

--- a/src/libOpenImageIO/CMakeLists.txt
+++ b/src/libOpenImageIO/CMakeLists.txt
@@ -140,7 +140,7 @@ target_link_libraries (OpenImageIO
             $<TARGET_NAME_IF_EXISTS:TBB::tbb>
             ${BZIP2_LIBRARIES}
             ZLIB::ZLIB
-            $<TARGET_NAME_IF_EXISTS:Boost::thread>
+            ${Boost_LIBRARIES}
             ${CMAKE_DL_LIBS}
         )
 
