Patched from https://github.com/OpenImageIO/oiio/pull/3598
The current default behavior is to
1. Check if there's already a copy of fmt found.
2. If not (or if BUILD_FMT_FORCE is ON), download it locally.
3. Copy the relevant fmt .h files as part of the OIIO install in
   OpenImageIO_ROOT/include/OpenImageIO/detail/fmt

This patch adds a new INTERNALIZE_FMT option, which defaults to ON,
whch is the old behavior. But if set to OFF at build time, the fmt
headers will NOT be copied into OIIO's install area (instead, it will
have dummy files that in turn include the real ones).

Set INTERNALIZE_FMT to OFF if you are really sure you want users of
OIIO to use the system install of fmt and not have OIIO install a new
copy.

When an externalized fmt is used, also make sure our exported cmake
config files cause the downstream user to find fmt and pass on the
dependency properly (necessary because strutil.h actually requires
properly including fmt headers).

--- a/src/include/CMakeLists.txt
+++ b/src/include/CMakeLists.txt
@@ -64,14 +64,25 @@ install (FILES ${detail_headers}
          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/detail
          COMPONENT developer)
 
-set (fmt_headers
-        ${FMT_INCLUDES}/fmt/core.h
-        ${FMT_INCLUDES}/fmt/format-inl.h
-        ${FMT_INCLUDES}/fmt/format.h
-        ${FMT_INCLUDES}/fmt/ostream.h
-        ${FMT_INCLUDES}/fmt/printf.h )
-file (COPY ${fmt_headers}
-      DESTINATION ${CMAKE_BINARY_DIR}/include/OpenImageIO/detail/fmt)
+if (INTERNALIZE_FMT OR OIIO_USING_FMT_LOCAL)
+    set (fmt_headers
+         ${FMT_INCLUDES}/fmt/core.h
+         ${FMT_INCLUDES}/fmt/format-inl.h
+         ${FMT_INCLUDES}/fmt/format.h
+         ${FMT_INCLUDES}/fmt/ostream.h
+         ${FMT_INCLUDES}/fmt/printf.h )
+    file (COPY ${fmt_headers}
+          DESTINATION ${CMAKE_BINARY_DIR}/include/OpenImageIO/detail/fmt)
+else ()
+    set (fmt_headers
+         ${CMAKE_BINARY_DIR}/include/OpenImageIO/detail/fmt/format.h
+         ${CMAKE_BINARY_DIR}/include/OpenImageIO/detail/fmt/ostream.h
+         ${CMAKE_BINARY_DIR}/include/OpenImageIO/detail/fmt/printf.h )
+    foreach (f format.h ostream.h printf.h)
+        file (WRITE "${CMAKE_BINARY_DIR}/include/OpenImageIO/detail/fmt/${f}"
+                    "#include <fmt/${f}>")
+    endforeach ()
+endif ()
 install (FILES ${fmt_headers}
          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/detail/fmt
          COMPONENT developer)
