--- a/src/libOpenImageIO/CMakeLists.txt
+++ b/src/libOpenImageIO/CMakeLists.txt
@@ -121,6 +121,10 @@ if (NOT BUILD_SHARED_LIBS)
     target_compile_definitions (OpenImageIO PUBLIC OIIO_STATIC_DEFINE=1)
 endif ()
 
+if (NOT INTERNALIZE_FMT AND NOT OIIO_USING_FMT_LOCAL)
+    target_compile_definitions (OpenImageIO PUBLIC OIIO_USE_EXTERNAL_FMT)
+endif ()
+
 # Propagate C++ minimum to downstream
 target_compile_features (OpenImageIO
                          INTERFACE cxx_std_${DOWNSTREAM_CXX_STANDARD})
