The current default behavior is to 1. Check if there's already a copy of fmt found. 2. If not (or if BUILD_FMT_FORCE is ON), download it locally. 3. Copy the relevant fmt .h files as part of the OIIO install in    OpenImageIO_ROOT/include/OpenImageIO/detail/fmt
This patch adds a new INTERNALIZE_FMT option, which defaults to ON,
whch is the old behavior. But if set to OFF at build time, the fmt
headers will NOT be copied into OIIO's install area (instead, it will
have dummy files that in turn include the real ones).

Set INTERNALIZE_FMT to OFF if you are really sure you want users of
OIIO to use the system install of fmt and not have OIIO install a new
copy.

When an externalized fmt is used, also make sure our exported cmake
config files cause the downstream user to find fmt and pass on the
dependency properly (necessary because strutil.h actually requires
properly including fmt headers).

--- a/src/cmake/Config.cmake.in
+++ b/src/cmake/Config.cmake.in
@@ -17,6 +17,10 @@ if (NOT @OPENIMAGEIO_CONFIG_DO_NOT_FIND_IMATH@ AND NOT OPENIMAGEIO_CONFIG_DO_NOT
     endif ()
 endif ()
 
+if (NOT @OIIO_USING_FMT_LOCAL@)
+    find_dependency(fmt)
+endif ()
+
 if (NOT @BUILD_SHARED_LIBS@)
     # This is required in static library builds, as e.g. PNG::PNG appears among
     # INTERFACE_LINK_LIBRARIES. If the project does not know about PNG target, it will cause
