--- a/src/libutil/CMakeLists.txt
+++ b/src/libutil/CMakeLists.txt
@@ -17,9 +17,8 @@ target_link_libraries (OpenImageIO_Util
             ${OPENIMAGEIO_IMATH_DEPENDENCY_VISIBILITY}
             ${OPENIMAGEIO_IMATH_TARGETS}
         PRIVATE
-            $<TARGET_NAME_IF_EXISTS:Boost::filesystem>
-            $<TARGET_NAME_IF_EXISTS:Boost::thread>
             $<TARGET_NAME_IF_EXISTS:TBB::tbb>
+            ${Boost_LIBRARIES}
             ${CMAKE_DL_LIBS}
         )
 
