--- a/src/cmake/Config.cmake.in
+++ b/src/cmake/Config.cmake.in
@@ -27,6 +27,7 @@ if (NOT @BUILD_SHARED_LIBS@)
     # This is required in static library builds, as e.g. PNG::PNG appears among
     # INTERFACE_LINK_LIBRARIES. If the project does not know about PNG target, it will cause
     # configuration error about unknown targets being linked in.
+    find_dependency(Libheif)
     find_dependency(TIFF)
     if (@JPEG_FOUND@)
         find_dependency(JPEG)
